# shapa-llm

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
shapa/: __init__.py  __main__.py  capture.py  cli.py  config.py  embed.py  fetch.py  frontmatter.py  heartbeat.py  maintain.py  nodes.py  score.py  validate.py
shapa/assets/: AGENTS.md
shapa/assets/arch/: MACRO.md  PRD.md  hook-design.md  memri-spec.md
tests/: test_capture.py  test_cli.py  test_fetch.py  test_heartbeat.py  test_maintain.py  test_score.py  test_validate.py
tests/fixtures/fetch/: f-long.md  f-meta.md  f-out.md
tests/fixtures/frontmatter/: bad-consequence.md  bad-id.md  bad-type.md  valid.md
tests/fixtures/graph/: a.md  b.md  c.md  d.md  e.md
tests/fixtures/score/: badscore.md  high.md  low.md
